@@ -96,7 +96,7 @@ var CloudCommander, Util, DOM, CodeMirror;
      * function loads CodeMirror js and css files 
      */
     function load(pCallBack){
-        console.time('codemirror load');
+        Util.time('codemirror load');
         var lDir    = CloudCmd.LIBDIRCLIENT + 'editor/codemirror/',
             lFiles  =
                 [
@@ -110,7 +110,7 @@ var CloudCommander, Util, DOM, CodeMirror;
                 ];
         
         DOM.anyLoadOnLoad(lFiles, function(){
-            console.timeEnd('codemirror load');
+            Util.timeEnd('codemirror load');
             CodeMirrorLoaded = true;
             Util.exec(pCallBack);
         });
@@ -125,33 +125,30 @@ var CloudCommander, Util, DOM, CodeMirror;
          * called do not call it again
          * if f4 key pressed couple times
          */
-        if(Loading)
-            return;
-        
-        /* checking is this link is to directory 
-         * when folder view is no need to edit data
-         */
-        if ( DOM.getCurrentSize() === '<dir>' )
-            ReadOnly = true;
-        
-        Loading = true;
-        
-        var lFalseLoading = function(){ Loading = false; };
-        
-        setTimeout(lFalseLoading, 400);
-        /* reading data from current file */
-        DOM.getCurrentData({
-            error      : lFalseLoading,
-            success    : function(data){
-                if( DOM.hidePanel() ){
-                    Util.exec(pCallBack, data);
-                    KeyBinding.unSet();
+        if(!Loading){
+            /* checking is this link is to directory 
+             * when folder view is no need to edit data */
+            ReadOnly = DOM.isCurrentIsDir();
+            
+            Loading = true;
+            
+            var lFalseLoading = function(){ Loading = false; };
+            
+            setTimeout(lFalseLoading, 400);
+            
+            DOM.getCurrentData({
+                error      : lFalseLoading,
+                success    : function(data){
+                    if( DOM.hidePanel() ){
+                        Util.exec(pCallBack, data);
+                        KeyBinding.unSet();
+                    }
+                    
+                    DOM.Images.hideLoad();
+                    lFalseLoading();
                 }
-                
-                DOM.Images.hideLoad();
-                lFalseLoading();
-            }
-        });
+            });
+        }
     }
     
     /**
