@@ -7,7 +7,7 @@ Util = exports || {};
 
 (function(Util){
     'use strict';
-
+    
     var Scope = exports ? global : window;
     
     /** setting function context
@@ -51,9 +51,8 @@ Util = exports || {};
     Util.checkExtension         = function(pName, pExt){
         var lRet = false,
             lLength = pName.length; /* длина имени*/
-        /* если длина имени больше
-         * длинны расширения - 
-         * имеет смысл продолжать
+        
+        /* если длина имени больше длинны расширения - имеет смысл продолжать
          */
         if (Util.isString(pExt) && pName.length > pExt.length) {
             var lExtNum = pName.lastIndexOf(pExt),  /* последнее вхождение расширения*/
@@ -538,6 +537,14 @@ Util = exports || {};
     };
     
     /**
+     * functions check is pVarible is number
+     * @param pVarible
+     */
+    Util.isNumber               = function(pVarible){
+        return Util.isType(pVarible, 'number');
+    };
+    
+    /**
      * functions check is pVarible is object
      * @param pVarible
      */
@@ -759,8 +766,11 @@ Util = exports || {};
      */
     Util.execIfExist                = function(pObj, pName, pArg){
         var lRet;
-        if(pObj)
-            lRet = Util.exec(pObj[pName], pArg);
+        
+        if(pObj){
+            var lFunc = Util.bind(pObj[pName], pObj);
+            lRet = Util.exec(lFunc, pArg);
+        }
         
         return lRet;
     };
@@ -876,7 +886,7 @@ Util = exports || {};
         
         lRet = Util.execIfExist(lConsole, 'timeEnd', pArg);
         
-        return this;
+        return lRet;
     };
     /** 
      * Gets current date in format yy.mm.dd hh:mm:ss
